fixing comment divs on front page; small tweak to blog entry post.

--- a/index.yaml
+++ b/index.yaml
@@ -16,7 +16,7 @@ indexes:
   - name: published
     direction: desc
 
-# Unused in query history -- copied from input.
+# Used once in query history.
 - kind: BlogEntry
   properties:
   - name: tags
